--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ server:
 ---
 spring:
   application:
-    name: ServiceName
+    name: TextAnalizerService
   profiles: local, default
      
 datasource:
@@ -42,7 +42,7 @@ api:
 swagger:
   enabled: true
   title: Service API
-  description: Sample Swagger implementation for the `ServiceName` service, leveraging annotations at the controller-method level.
+  description: Sample Swagger implementation for the `TextAnalizerService` service, leveraging annotations at the controller-method level.
   useDefaultResponseMessages: false
   enableUrlTemplating: false
   deepLinking: true
